Commit #2 Web Completa

--- a/HotelWeb/Views/Sedes/VerSedes.cshtml
+++ b/HotelWeb/Views/Sedes/VerSedes.cshtml
@@ -54,7 +54,7 @@
                     <div class="info-boxes">
                         <div class="info-box">
                             <h3>Ubicación</h3>
-                            <p>Cartagena - En el corazón de la ciudad</p>
+                            <p>Cartagena - En la costa de la ciudad</p>
                         </div>
                         <div class="info-box">
                             <h3>Rango de precio</h3>
@@ -65,7 +65,7 @@
             </div>
             <div class="image-wrapper">
                 <img src="~/css/SedeCartagena.png" class="sofa-image" />
-                <a href="" class="cta-button">Ver habitaciones</a>
+                <a asp-controller="Sedes" asp-action="VerHabitacionesSedeColombia" class="cta-button">Ver habitaciones</a>
             </div>
         </div>
         <div class="dual-display">
@@ -103,40 +103,8 @@
             </div>
             <div class="image-wrapper01">
                 <img src="~/css/SedeBarcelona.png" class="sofa-image01" alt="Sede Cartagena" />
-                <a href="" class="cta-button01">Ver habitaciones</a>
+                <a asp-controller="Sedes" asp-action="VerHabitacionesSedeEspania" class="cta-button01">Ver habitaciones</a>
             </div>
-        </div>
-    </div>
-</section>
-<section class="promo-section">
-    <div class="promo-container">
-        <div class="main-offer">
-            <svg class="wave-decoration2" viewBox="0 0 1440 150" preserveAspectRatio="none">
-                <path d="M0,80C120,100,240,120,360,125.3C480,130,600,120,720,106.7C840,93,960,75,1080,74.7C1200,75,1320,91,1380,101.3L1440,112L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z" fill="rgba(255,255,255,0.05)"></path>
-            </svg>
-            <div class="content-section">
-                <div class="info-header">
-                    <h2 class="offer-title">Sede Japón</h2>
-                    <div class="info-boxes">
-                        <div class="info-box">
-                            <h3>Ubicación</h3>
-                            <p>Tokio - En el corazón de la ciudad</p>
-                        </div>
-                        <div class="info-box">
-                            <h3>Rango de precio</h3>
-                            <p>Desde $350,000 hasta $2,900,000 COP por noche</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="image-wrapper">
-                <img src="~/css/SedeTokio.png" class="sofa-image" />
-                <a href="" class="cta-button">Ver habitaciones</a>
-            </div>
-        </div>
-        <div class="dual-display">
-            <div class="glass-cardt left-halft"></div>
-            <div class="glass-cardt right-halft"></div>
         </div>
     </div>
 </section>
