--- a/HotelWeb/Views/Sedes/VerhabitacionesSedePrincipal.cshtml
+++ b/HotelWeb/Views/Sedes/VerhabitacionesSedePrincipal.cshtml
@@ -74,7 +74,7 @@
                     </div>
                     <p class="price">$@h.Precio COP</p>
                     <p class="night">por noche</p>
-                    <a asp-controller="Reservas" asp-action="ReservaNY" asp-route-id="@h.IdHabitacion" class="cta-offer">
+                    <a asp-controller="Reservas" asp-action="Reservas" asp-route-id="@h.IdHabitacion" class="cta-offer">
                         Reservar
                     </a>
                 </div>
